Create comment couter for Post.

--- a/src/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/AdminBundle/Resources/views/Default/index.html.twig
@@ -63,7 +63,7 @@
                     }
                 },
                 update: function () {
-                    this.getJSONtest();
+                    this.getJSONText();
                 }
             },
             created: function () {
