--- a/src/PostsBundle/Resources/views/post/index.html.twig
+++ b/src/PostsBundle/Resources/views/post/index.html.twig
@@ -22,7 +22,9 @@
                         <p>{{ post.text }}</p>
                         <ul class="list-inline list-unstyled">
                             <li>
-                                <span><i class="glyphicon glyphicon-calendar"></i>{{ post.createAt|date('Y-m-d H:i:s') }}</span>
+                                <small>
+                                    <span><i class="glyphicon glyphicon-calendar"></i>{{ post.createAt|date('Y-m-d H:i:s') }}</span>
+                                </small>
                             </li>
                             <li>|</li>
                             <span><i class="glyphicon glyphicon-comment"></i> {{ post.commentCount }} comments</span>
